--- a/openApiDocs/beta/DeviceManagement.Administration.yml
+++ b/openApiDocs/beta/DeviceManagement.Administration.yml
@@ -18623,14 +18623,14 @@ components:
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: The date time when the export job expires.
+              description: The date and time when the export job expires.
               format: date-time
               nullable: true
             exportJobStatus:
               $ref: '#/components/schemas/microsoft.graph.cloudPcExportJobStatus'
             exportUrl:
               type: string
-              description: 'The storage account url of the exported report, it can be used to download the file.'
+              description: The storage account URL of the exported report. It can be used to download the file.
               nullable: true
             filter:
               type: string
@@ -18645,7 +18645,7 @@ components:
             requestDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: The date time when the export job was requested.
+              description: The date and time when the export job was requested.
               format: date-time
               nullable: true
             select:
