--- a/openApiDocs/beta/CloudCommunications.yml
+++ b/openApiDocs/beta/CloudCommunications.yml
@@ -2645,6 +2645,8 @@ paths:
                 - metadata desc
                 - recordingInfo
                 - recordingInfo desc
+                - restrictedExperience
+                - restrictedExperience desc
               type: string
         - name: $select
           in: query
@@ -2664,6 +2666,7 @@ paths:
                 - mediaStreams
                 - metadata
                 - recordingInfo
+                - restrictedExperience
               type: string
         - name: $expand
           in: query
@@ -2758,6 +2761,7 @@ paths:
                 - mediaStreams
                 - metadata
                 - recordingInfo
+                - restrictedExperience
               type: string
         - name: $expand
           in: query
@@ -3011,10 +3015,10 @@ paths:
       tags:
         - communications.Actions
       summary: Invoke action invite
-      description: 'Invite participants to the active call. For more information about how to handle operations, see commsOperation.'
+      description: 'Delete a specific participant in a call. In some situations, it is appropriate for an application to remove a participant from an active call. This action can be done before or after the participant answers the call. When an active caller is removed, they are immediately dropped from the call with no pre- or post-removal notification. When an invited participant is removed, any outstanding add participant request is canceled.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/participant-invite?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/participant-delete?view=graph-rest-1.0
       operationId: communications.calls.participants_invite
       parameters:
         - name: call-id
@@ -3257,6 +3261,8 @@ paths:
                 - subject desc
                 - videoTeleconferenceId
                 - videoTeleconferenceId desc
+                - watermarkProtection
+                - watermarkProtection desc
               type: string
         - name: $select
           in: query
@@ -3296,6 +3302,7 @@ paths:
                 - startDateTime
                 - subject
                 - videoTeleconferenceId
+                - watermarkProtection
                 - virtualAppointment
                 - attendanceReports
                 - meetingAttendanceReport
@@ -3403,6 +3410,7 @@ paths:
                 - startDateTime
                 - subject
                 - videoTeleconferenceId
+                - watermarkProtection
                 - virtualAppointment
                 - attendanceReports
                 - meetingAttendanceReport
@@ -4589,11 +4597,11 @@ paths:
     get:
       tags:
         - communications.onlineMeeting
-      summary: Get externalMeetingRegistration
-      description: Get the externalMeetingRegistration details associated with an onlineMeeting.
+      summary: Get meetingRegistration
+      description: Get the meetingRegistration details associated with an onlineMeeting on behalf of the organizer.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalmeetingregistration-get?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/meetingregistration-get?view=graph-rest-1.0
       operationId: communications.onlineMeetings_GetRegistration
       parameters:
         - name: onlineMeeting-id
@@ -4688,11 +4696,11 @@ paths:
     delete:
       tags:
         - communications.onlineMeeting
-      summary: Delete meetingRegistration
-      description: Disable and delete the meetingRegistration of an onlineMeeting on behalf of the organizer.
+      summary: Delete externalMeetingRegistration
+      description: Disable and delete the externalMeetingRegistration of an onlineMeeting.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/meetingregistration-delete?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/externalmeetingregistration-delete?view=graph-rest-1.0
       operationId: communications.onlineMeetings_DeleteRegistration
       parameters:
         - name: onlineMeeting-id
@@ -5759,6 +5767,10 @@ paths:
       tags:
         - communications.Actions
       summary: Invoke action setStatusMessage
+      description: Set a presence status message for a user. An optional expiration date and time can be supplied.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/presence-setstatusmessage?view=graph-rest-1.0
       operationId: communications.presences_setStatusMessage
       parameters:
         - name: presence-id
@@ -5835,7 +5847,11 @@ paths:
     get:
       tags:
         - users.onlineMeeting
-      summary: Get onlineMeetings from users
+      summary: Get onlineMeeting
+      description: 'Retrieve the properties and relationships of an onlineMeeting object. For example, you can: Teams live event attendee report and Teams live event recordings are online meeting artifacts. For details, see Online meeting artifacts and permissions.'
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/onlinemeeting-get?view=graph-rest-1.0
       operationId: users_ListOnlineMeetings
       parameters:
         - name: user-id
@@ -5917,6 +5933,8 @@ paths:
                 - subject desc
                 - videoTeleconferenceId
                 - videoTeleconferenceId desc
+                - watermarkProtection
+                - watermarkProtection desc
               type: string
         - name: $select
           in: query
@@ -5956,6 +5974,7 @@ paths:
                 - startDateTime
                 - subject
                 - videoTeleconferenceId
+                - watermarkProtection
                 - virtualAppointment
                 - attendanceReports
                 - meetingAttendanceReport
@@ -6084,6 +6103,7 @@ paths:
                 - startDateTime
                 - subject
                 - videoTeleconferenceId
+                - watermarkProtection
                 - virtualAppointment
                 - attendanceReports
                 - meetingAttendanceReport
@@ -6196,6 +6216,9 @@ paths:
         - users.onlineMeeting
       summary: Get alternativeRecording for the navigation property onlineMeetings from users
       description: The content stream of the alternative recording of a Microsoft Teams live event. Read-only.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/onlinemeeting-get?view=graph-rest-1.0
       operationId: users_GetOnlineMeetingsAlternativeRecording
       parameters:
         - name: user-id
@@ -6892,6 +6915,9 @@ paths:
         - users.onlineMeeting
       summary: Get attendeeReport for the navigation property onlineMeetings from users
       description: The content stream of the attendee report of a Teams live event. Read-only.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/onlinemeeting-get?view=graph-rest-1.0
       operationId: users_GetOnlineMeetingsAttendeeReport
       parameters:
         - name: user-id
@@ -7399,6 +7425,9 @@ paths:
         - users.onlineMeeting
       summary: Get recording for the navigation property onlineMeetings from users
       description: The content stream of the recording of a Teams live event. Read-only.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/onlinemeeting-get?view=graph-rest-1.0
       operationId: users_GetOnlineMeetingsRecording
       parameters:
         - name: user-id
@@ -7469,11 +7498,11 @@ paths:
     get:
       tags:
         - users.onlineMeeting
-      summary: Get externalMeetingRegistration
-      description: Get the externalMeetingRegistration details associated with an onlineMeeting.
+      summary: Get meetingRegistration
+      description: Get the meetingRegistration details associated with an onlineMeeting on behalf of the organizer.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalmeetingregistration-get?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/meetingregistration-get?view=graph-rest-1.0
       operationId: users.onlineMeetings_GetRegistration
       parameters:
         - name: user-id
@@ -7584,11 +7613,11 @@ paths:
     delete:
       tags:
         - users.onlineMeeting
-      summary: Delete meetingRegistration
-      description: Disable and delete the meetingRegistration of an onlineMeeting on behalf of the organizer.
+      summary: Delete externalMeetingRegistration
+      description: Disable and delete the externalMeetingRegistration of an onlineMeeting.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/meetingregistration-delete?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/externalmeetingregistration-delete?view=graph-rest-1.0
       operationId: users.onlineMeetings_DeleteRegistration
       parameters:
         - name: user-id
@@ -9040,6 +9069,8 @@ components:
               nullable: true
             recordingInfo:
               $ref: '#/components/schemas/microsoft.graph.recordingInfo'
+            restrictedExperience:
+              $ref: '#/components/schemas/microsoft.graph.onlineMeetingRestricted'
           additionalProperties:
             type: object
     microsoft.graph.startHoldMusicOperation:
@@ -9256,6 +9287,8 @@ components:
               type: string
               description: The video teleconferencing ID. Read-only.
               nullable: true
+            watermarkProtection:
+              $ref: '#/components/schemas/microsoft.graph.watermarkProtectionValues'
             virtualAppointment:
               $ref: '#/components/schemas/microsoft.graph.virtualAppointment'
             attendanceReports:
@@ -9513,6 +9546,7 @@ components:
         publishedDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: Time in which the status message was published.Read-only.publishedDateTime is not available when requesting presence of another user.
           format: date-time
           nullable: true
       additionalProperties:
@@ -9829,6 +9863,16 @@ components:
           $ref: '#/components/schemas/microsoft.graph.recordingStatus'
       additionalProperties:
         type: object
+    microsoft.graph.onlineMeetingRestricted:
+      title: onlineMeetingRestricted
+      type: object
+      properties:
+        contentSharingDisabled:
+          $ref: '#/components/schemas/microsoft.graph.onlineMeetingContentSharingDisabledReason'
+        videoDisabled:
+          $ref: '#/components/schemas/microsoft.graph.onlineMeetingVideoDisabledReason'
+      additionalProperties:
+        type: object
     microsoft.graph.teleconferenceDeviceMediaQuality:
       title: teleconferenceDeviceMediaQuality
       type: object
@@ -10090,6 +10134,18 @@ components:
           $ref: '#/components/schemas/microsoft.graph.lobbyBypassScope'
       additionalProperties:
         type: object
+    microsoft.graph.watermarkProtectionValues:
+      title: watermarkProtectionValues
+      type: object
+      properties:
+        isEnabledForContentSharing:
+          type: boolean
+          nullable: true
+        isEnabledForVideo:
+          type: boolean
+          nullable: true
+      additionalProperties:
+        type: object
     microsoft.graph.attendanceInterval:
       title: attendanceInterval
       type: object
@@ -10121,11 +10177,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: Unique identifier for the identity.
           nullable: true
       additionalProperties:
         type: object
@@ -10869,6 +10925,18 @@ components:
         - sendOnly
         - receiveOnly
         - sendReceive
+      type: string
+    microsoft.graph.onlineMeetingContentSharingDisabledReason:
+      title: onlineMeetingContentSharingDisabledReason
+      enum:
+        - watermarkProtection
+        - unknownFutureValue
+      type: string
+    microsoft.graph.onlineMeetingVideoDisabledReason:
+      title: onlineMeetingVideoDisabledReason
+      enum:
+        - watermarkProtection
+        - unknownFutureValue
       type: string
     ReferenceNumeric:
       enum:
