--- a/openApiDocs/beta/Identity.DirectoryManagement.yml
+++ b/openApiDocs/beta/Identity.DirectoryManagement.yml
@@ -15423,6 +15423,8 @@ paths:
                 - onPremisesLastSyncDateTime desc
                 - onPremisesSyncEnabled
                 - onPremisesSyncEnabled desc
+                - partnerTenantType
+                - partnerTenantType desc
                 - postalCode
                 - postalCode desc
                 - preferredLanguage
@@ -15473,6 +15475,7 @@ paths:
                 - marketingNotificationEmails
                 - onPremisesLastSyncDateTime
                 - onPremisesSyncEnabled
+                - partnerTenantType
                 - postalCode
                 - preferredLanguage
                 - privacyProfile
@@ -15581,6 +15584,7 @@ paths:
                 - marketingNotificationEmails
                 - onPremisesLastSyncDateTime
                 - onPremisesSyncEnabled
+                - partnerTenantType
                 - postalCode
                 - preferredLanguage
                 - privacyProfile
@@ -20391,6 +20395,8 @@ components:
               type: boolean
               description: true if this object is synced from an on-premises directory; false if this object was originally synced from an on-premises directory but is no longer synced; Nullable. null if this object has never been synced from an on-premises directory (default).
               nullable: true
+            partnerTenantType:
+              $ref: '#/components/schemas/microsoft.graph.partnerTenantType'
             postalCode:
               type: string
               description: Postal code of the address for the organization.
@@ -20622,11 +20628,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: Unique identifier for the identity.
           nullable: true
       additionalProperties:
         type: object
@@ -21111,6 +21117,17 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.partnerTenantType:
+      title: partnerTenantType
+      enum:
+        - microsoftSupport
+        - syndicatePartner
+        - breadthPartner
+        - breadthPartnerDelegatedAdmin
+        - resellerPartnerDelegatedAdmin
+        - valueAddedResellerPartnerDelegatedAdmin
+        - unknownFutureValue
+      type: string
     microsoft.graph.privacyProfile:
       title: privacyProfile
       type: object
