updated forked endpoint

--- a/.azure-pipelines/temporary-examples-migration.yml
+++ b/.azure-pipelines/temporary-examples-migration.yml
@@ -20,7 +20,7 @@ resources:
   #    ref: features/2.0
    - repository: DevRepo
      type: github
-     endpoint: microsoftgraph
+     endpoint: timayabi2020
      name: timayabi2020/msgraph-sdk-powershell
      ref: dev
   
